glasskube/trieve/ui/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trieve-ui
spec:
  selector: {}
  template:
    spec:
      containers:
        - name: ui
          image: ui
          ports:
            - containerPort: 80
          resources: {}
