glasskube/trieve/ui/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: trieve-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      name: http
